ADD: I think I have finished the migration for not, might go back and correct them. NOT TESTED

--- a/backend/Dockerfile.dev
+++ b/backend/Dockerfile.dev
@@ -6,4 +6,4 @@ RUN go mod download
 
 COPY . .
 
-CMD ["go", "run", "-race", "cmd/sanqa-suq-srv/main.go"]
+CMD ["go", "run", "cmd/sanqa-suq-srv/main.go"]
