--- a/backend/docker-compose.yaml
+++ b/backend/docker-compose.yaml
@@ -11,7 +11,7 @@ services:
     depends_on:
       - postgres
   postgres: 
-    image: postgres:latest  
+    image: postgres:16-alpine  
     ports:
       - "5432:5432"
     environment:
