--- a/backend/docker-compose.yaml
+++ b/backend/docker-compose.yaml
@@ -8,6 +8,8 @@ services:
       - "8080:8080"
     environment:
       PORT: 8080
+    volumes:
+      - .:/app
     depends_on:
       - postgres
   postgres: 
