ADD: user creation endpoint

--- a/backend/example.env
+++ b/backend/example.env
@@ -4,3 +4,4 @@ POSTGRES_DB=sanqasuq
 POSTGRES_HOST=localhost
 POSTGRES_PORT=5432
 POSTGRES_URL=postgresql://sanqasuq:sanqasuq@localhost:5432/sanqasuq
+API_VERSION=v1
