docker compose working all correct

--- a/backend/docker-compose.yaml
+++ b/backend/docker-compose.yaml
@@ -1,27 +1,39 @@
-name: sanqa-suq
 services:
-  app: 
+  app:
     build:
-      context: ./ 
+      context: ./
       dockerfile: dev.Dockerfile
     ports:
       - "8080:8080"
-    environment:
-      PORT: 8080
+    env_file:
+      - .env
     volumes:
       - .:/app
     depends_on:
-      - postgres
-  postgres: 
-    image: postgres:16-alpine  
+      postgres:
+        condition: service_healthy
+    networks:
+      - sanqa-suq-network
+
+  postgres:
+    image: postgres:16-alpine
     ports:
       - "5432:5432"
-    environment:
-      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
-      - POSTGRES_DB=${POSTGRES_DB}
-      - POSTGRES_USER=${POSTGRES_USER}
+    env_file:
+      - .env
     volumes:
       - postgres_data:/var/lib/postgresql/data
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER} -d ${POSTGRES_DB}"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+    networks:
+      - sanqa-suq-network
+
+networks:
+  sanqa-suq-network:
+    driver: bridge
 
 volumes:
   postgres_data:
