--- a/backend/example.env
+++ b/backend/example.env
@@ -5,3 +5,5 @@ POSTGRES_HOST=localhost
 POSTGRES_PORT=5432
 POSTGRES_URL=postgresql://sanqasuq:sanqasuq@localhost:5432/sanqasuq
 API_VERSION=v1
+JWT_SECRET=supersecretkey
+JWT_ISSUER=example.com
