--- a/backend/docker-compose.yaml
+++ b/backend/docker-compose.yaml
@@ -9,6 +9,7 @@ services:
       - .env
     volumes:
       - .:/app
+      - /app/tmp
     depends_on:
       postgres:
         condition: service_healthy
